# Vividmind

./: .clang-format-ignore  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  board.c  board.h  engine_random_moves  main.c  move.c  move.h  piece.c  piece.h  square.h
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
include/: board.h  board.hpp  board_helper.h  board_helper.hpp  board_utils.h  board_utils.hpp  game_over_conditions.h  game_over_detector.h  game_over_detector.hpp  game_state.h  move.h  move.hpp  move_generator.h  move_generator.hpp  move_validator.h  move_validator.hpp  piece.h  piece.hpp  pos.h  pos.hpp  square.h  square.hpp  utils.hpp
include/engine/: engine.h  engine.hpp  psqt.h  psqt.hpp  uci.h  uci.hpp
include/pieces/: bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
include/test/: test_bishop_moves.h  test_knight_moves.h  test_utils.h
scripts/: format-check.sh  format.sh  test_engine.py
src/: board.c  board.cpp  board.hpp  board_helper.cpp  board_utils.c  board_utils.cpp  defs.hpp  engine.cpp  engine.hpp  fen.cpp  fen.hpp  game_over_conditions.c  game_over_conditions.cpp  game_over_detector.cpp  game_state.c  game_state.cpp  main.c  main.cpp  move.c  move.cpp  move.hpp  move_gen.cpp  move_gen.hpp  move_generator.cpp  move_generator.hpp  move_validator.cpp  perft.cpp  perft.hpp  piece.c  piece.cpp  piece.hpp  pos.cpp  search.cpp  search.hpp  square.c  square.cpp  square.hpp  terminal_game.c  terminal_game.cpp  uci.cpp  (+3 more)
src/bitboards_board/: bitboards.cpp  bitboards.hpp  bitboards_board.cpp  bitboards_board.hpp  bits.cpp  bits.hpp  masks.cpp  masks.hpp  move_gen.cpp  move_gen_lookup_tables.cpp  move_gen_lookup_tables.hpp
src/board/: bits.cpp  bits.hpp  board.cpp  board.hpp  board_defs.hpp  defs.hpp  draw.cpp  fen.cpp  fen.hpp  mailbox.cpp  masks.cpp  move_gen.cpp  piece.hpp  playmove.cpp
src/engine/: command.cpp  command.hpp  engine.c  engine.cpp  engine.hpp  move_sort.cpp  move_sort.hpp  psqt.cpp  search.cpp  search.hpp  search_defs.cpp  search_defs.hpp  time_management.hpp  uci.c  uci.cpp
src/evaluation/: evaluation.cpp  evaluation.hpp  psqt.cpp  psqt.hpp
src/mailbox_board/: draw.cpp  mailbox_board.cpp  mailbox_board.hpp  mailbox_board_defs.hpp  move_gen.cpp  playmove.cpp  square.cpp
src/move_gen/: king.cpp  pawn.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/search/: command.cpp  command.hpp  defs.cpp  defs.hpp  engine.cpp  engine.hpp  search.cpp  search.hpp  time_management.cpp
src/test/: test_bishop_moves.c  test_knight_moves.c  test_rook_moves.c  test_runner.c  test_utils.c
tests/: test_basic_move_gen.cpp  test_board.cpp  test_draw.cpp  test_gen_pseudo_legal_moves.cpp  test_move.cpp  test_move_gen.cpp  test_move_sort.cpp  test_positions.cpp  test_positions.hpp  tests.cpp
tests/include/: test_knight_moves.h  test_move_generator.h  test_rook_moves.h  test_utils.h
tests/src/: test_bishop_moves.c  test_bishop_moves.cpp  test_knight_moves.c  test_knight_moves.cpp  test_move_generator.c  test_move_generator.cpp  test_positions.cpp  test_rook_moves.c  test_rook_moves.cpp  test_runner.c  test_utils.c
